# ReleaseMindRepro

./: .gitignore  README.md  pyproject.toml
artifacts/reference/: manifest.json  reproducibility_bundle.md  run-meta.json
configs/: paper.toml  paper_ci.toml  paper_smoke.toml
data/fixtures/: oracle_parse_edgecases.jsonl  rnsum_small.jsonl  smartnote_small.parquet
docs/: architecture.md  artifact_manifest.md  command_reference.md  dataset_setup.md  quickstart.md  release_mind_repro.md  troubleshooting.md
scripts/: compare_reference.sh  repro_paper.sh  repro_smoke.sh  run_ci_smoke.sh
src/releasemind_repro/: __init__.py  cli.py  config.py  oracle.py  proxy.py  style.py  utils.py
src/releasemind_repro/adapters/: paper_eval.py  paper_oracle.py  paper_simulate.py  paper_train.py
src/releasemind_repro/commands/: __init__.py  _helpers.py  audit.py  build_docs.py  compare.py  doctor.py  evaluate_risk.py  reproduce.py  simulate.py  train_proxies.py  verify.py
src/releasemind_repro/pipeline/: __init__.py  reference.py  schemas.py
tests/: test_cli.py  test_config.py  test_verify.py
