[project]
name = "releasemind-repro"
version = "0.1.6"
description = "ReleaseMind reproducibility pipeline for ReleaseMindPaper"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "ReleaseMind contributors"}]
license = {text = "CC-BY-4.0"}
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "joblib>=1.3",
  "tiktoken>=0.7",
  "pyarrow>=14.0",
  "google-genai>=1.33.0",
  "boto3>=1.34",
]

[project.optional-dependencies]
neobert = [
  "torch>=2.2",
  "transformers>=4.41",
  "tokenizers>=0.22",
  "safetensors>=0.4",
]

[project.scripts]
releasemind-repro = "releasemind_repro.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/releasemind_repro"]
